--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.50.3",
     "framer-motion": "^12.9.2",
+    "lucide-react": "^0.525.0",
     "next": "15.3.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
